[package]
name = "idgen-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.38"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
actix-web = "4.3.0"
env_logger = "0.10.0"
log = "0.4.17"
chrono = "0.4.23"
confique = "0.2.2"
serde = "1.0.152"
serde_json = "1.0.91"
